Matrix.cppresult.txt
In file included from cur.cpp:16:0:
piterimova/Matrix.cpp:35:15: error: 'matr' does not name a type
  Matrix(const matr& A)
               ^
piterimova/Matrix.cpp:35:21: error: ISO C++ forbids declaration of 'A' with no type [-fpermissive]
  Matrix(const matr& A)
                     ^
piterimova/Matrix.cpp: In constructor 'Matrix::Matrix(const int&)':
piterimova/Matrix.cpp:37:12: error: request for member 'm' in 'A', which is of non-class type 'const int'
      m = A.m;
            ^
piterimova/Matrix.cpp:38:12: error: request for member 'n' in 'A', which is of non-class type 'const int'
      n = A.n;
            ^
piterimova/Matrix.cpp:41:22: error: request for member 'data' in 'A', which is of non-class type 'const int'
          data[i] = A.data[i];
                      ^
piterimova/Matrix.cpp: In member function 'virtual Matrix Matrix::reverse()':
piterimova/Matrix.cpp:200:9: error: 'matr' was not declared in this scope
         matr A (0,0);
         ^
piterimova/Matrix.cpp:200:14: error: expected ';' before 'A'
         matr A (0,0);
              ^
piterimova/Matrix.cpp:201:16: error: 'A' was not declared in this scope
         return A;
                ^
piterimova/Matrix.cpp:207:13: error: 'matr' was not declared in this scope
             matr A;
             ^
piterimova/Matrix.cpp:207:18: error: expected ';' before 'A'
             matr A;
                  ^
piterimova/Matrix.cpp:208:20: error: 'A' was not declared in this scope
             return A;
                    ^
cur.cpp: In member function 'virtual void MatrixTest_Reverse_Test::TestBody()':
cur.cpp:47:7: error: no match for 'operator=' (operand types are 'Matrix' and 'Matrix')
     c = m->reverse();
       ^
cur.cpp:47:7: note: candidate is:
In file included from cur.cpp:16:0:
piterimova/Matrix.cpp:45:10: note: Matrix& Matrix::operator=(Matrix&)
  Matrix& operator=(Matrix& A)
          ^
piterimova/Matrix.cpp:45:10: note:   no known conversion for argument 1 from 'Matrix' to 'Matrix&'
./check.sh: line 24: ./a.out: No such file or directory
